2004-11-16  Jonathan Pryor  <jonpryor@vt.edu>

	* Rename Mono.Posix to Mono.Unix.
	* Mono.Posix.dll.sources: Rename Mono.Posix to Mono.Unix.
	* Makefile: Update file paths to build from Mono.Unix.

2004-11-05  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add lots of new files to the binding.

2004-06-03  Raja R Harinath  <rharinath@novell.com>

	* Makefile (Mono.Posix/make-map.exe): Depend on $(the_lib) to pick
	the name of the library from library.make.  This should make it
	parallel-make-safe.

2004-04-26  Jackson Harper  <jackson@ximian.com>

	* Makefile: Dont use explicit lib references so the proper lib
	directory is used. Output to profile directory.
	
2004-01-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Makefile: handle win32 paths and copy Mono.Posix.dll to Mono.Posix
	directory so that MS runtime finds it.

2003-02-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Check in.
