@@ -1,3 +1,9 @@
+2004-11-16  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* IncludeAttribute.cs: Removed.
+	* MapAttribute.cs: Removed.
+	* Syscall.cs: Remove [Map] and [Include] attributes.
+
 2004-07-09  Dick Porter  <dick@ximian.com>
 
 	* PeerCred.cs: Get the unix socket peer credentials.
